--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,23 @@
     <java.version>1.8</java.version>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.source>${java.version}</maven.compiler.source>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+    <!-- Karate Apache -->
+    <dependency>
+        <groupId>com.intuit.karate</groupId>
+        <artifactId>karate-core</artifactId>
+        <version>karate-apache</version>
+        <scope>test</scope>
+    </dependency>
+
     <!-- Karate API -->
     <dependency>
         <groupId>com.intuit.karate</groupId>
-        <artifactId>karate-apache</artifactId>
-        <version>0.9.6</version>
+        <artifactId>karate-core</artifactId>
+        <version>1.4.0</version>
         <scope>test</scope>
     </dependency>
 
@@ -25,9 +34,8 @@
     <dependency>
         <groupId>com.intuit.karate</groupId>
         <artifactId>karate-junit5</artifactId>
-        <version>0.9.6</version>
-        <scope>test</scope>
-    </dependency>
+        <version>1.4.0</version>
+    </dependency>  
   </dependencies>
 
   <build>
@@ -48,10 +56,21 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
+          <encoding>UTF-8</encoding>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
         </configuration>
-      </plugin>
+      </plugin>  
+
+      <!-- Surefire Plugin -->
+      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
     </plugins>
   </build>
 
